fixed video aspect ratio on mobile

--- a/app/media/page.module.scss
+++ b/app/media/page.module.scss
@@ -8,6 +8,7 @@
   flex-wrap: wrap;
   & > div {
     width: calc(50% - 1.3rem);
+    height: 340px;
     iframe {
       width: 100%;
       z-index: 5;
@@ -32,6 +33,7 @@
   .youtube_container {
     & > div {
       width: 100%;
+      height: 207px;
     }
   }
   .news_container {
